# geotab-geoff

./: .env.example  .gitignore  API_QUICKSTART.md  COMPETITION.md  EVALUATION.md  INSTANT_START_WITH_CLAUDE.md  LICENSE  PLAN.md  README.md  SCORING.md  VIBE_CODING_JOURNEY.md  blenderplan  firebase.json  firestore.indexes.json  firestore.rules
.github/workflows/: ci.yml  reddit-bot.yml
app/: addin.html  eslint.config.js  package-lock.json  package.json  vite.addin.config.js
app/scripts/: inline-addin.js
app/src/: App.jsx  main.jsx  (+3 more)
demos/: 02-fleet-safety-problem.txt  03-speech-analytics-parallel.txt  04-how-geoff-works.txt  05-lipsync-pipeline.txt  06-escalation-system.txt  07-three-geotab-channels.txt  08-vibe-coding.txt  09-five-cent-session.txt  10-supervisor-experience.txt  generate-video.sh  geoff-demo-script.txt  podcast-transcript.md
functions/: index.js  package-lock.json  package.json  seed-demo.js
guides/: 01-the-18920-line-first-commit.md  02-steal-from-another-industry.md  03-ai-evaluating-ai.md  04-server-side-safety-net.md  05-mygeotab-addin-gotchas.md  06-ace-ai-integration.md  07-odata-data-connector.md  08-cloud-run-gpu-on-a-budget.md  09-the-five-cent-pipeline.md  10-mcp-server-patterns.md  11-when-to-correct-the-ai.md  12-prompt-to-multimedia.md  13-going-global.md  README.md
lipsync-service/: .gcloudignore  Dockerfile  app.py
mcp-server/: geotab_client.py  odata_client.py  pyproject.toml  server.py
reddit-bot/: .env.example  bot.py  requirements.txt  topics.py
scripts/: geoff-intro-script.txt  package-lock.json  package.json  seed.js
(+20 files in other folders)
