[project]
name = "geoff-mcp-server"
version = "0.1.0"
description = "MCP server for Geotab fleet data — conversational access to safety events, fleet KPIs, and driver rankings"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
geoff-mcp = "server:main"
